alta con bower ya angular

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 <script SRC="bower_components/angular/angular.min.js" TYPE="text/javascript"></script>
-
+<script type="text/javascript" src="angular-ui-router.min.js"></script>
  	<script SRC="js/app.js" TYPE="text/javascript"></script>
 <script SRC="bower_components\angular-ui-router\release\angular-ui-router.min.js" TYPE="text/javascript"></script>	
 </head>
@@ -24,7 +24,7 @@
 		         	</a>
 		         </li>
 		         <li class="btn btn-info animated bounceInLeft" >
-		         	<a ui-sref="Alta">
+		         	<a ui-sref="iusua">
 		         		<span class="glyphicon glyphicon-th">&nbsp;</span>
 		         		Entrar con cuenta.
 		         	</a>
@@ -35,6 +35,17 @@
 		         			Registrarse.</a>
 		         		</li>
 		        	<span id="tituloBarra"  class="animated bounceInRight">
+      </ul>
+		
+
+	
+	  <div ui-view>
+         
+
+
+
+
+	  </div>
 
 
  <img src="fotos/inicio.jpg"width="1280" height="800">
